editor/tree-sitter-frost/test/corpus/higher_order.txt
==================
map filter foreach reduce
==================

def a = map xs with fn (x) -> { x + 1 }
def b = filter a with fn (x) -> { x > 2 }
def c = foreach b with print
def d = reduce b init: 0 with fn (acc, x) -> { acc + x }

---

(source_file
  (definition
    (kw_def)
    (identifier)
    (or_expression
      (and_expression
        (equality_expression
          (comparison_expression
            (sum_expression
              (product_expression
                (unary_expression
                  (postfix_expression
                    (primary_expression
                      (map_expression
                        (kw_map)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (identifier))))))))))
                        (kw_with)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (lambda_expression
                                            (kw_fn)
                                            (lambda_parameters_parenthesized
                                              (lambda_parameter_payload
                                                (identifier)))
                                            (block
                                              (expression_statement
                                                (or_expression
                                                  (and_expression
                                                    (equality_expression
                                                      (comparison_expression
                                                        (sum_expression
                                                          (sum_expression
                                                            (product_expression
                                                              (unary_expression
                                                                (postfix_expression
                                                                  (primary_expression
                                                                    (identifier))))))
                                                          (product_expression
                                                            (unary_expression
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (integer)))))))))))))))))))))))))))))))))
  (definition
    (kw_def)
    (identifier)
    (or_expression
      (and_expression
        (equality_expression
          (comparison_expression
            (sum_expression
              (product_expression
                (unary_expression
                  (postfix_expression
                    (primary_expression
                      (filter_expression
                        (kw_filter)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (identifier))))))))))
                        (kw_with)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (lambda_expression
                                            (kw_fn)
                                            (lambda_parameters_parenthesized
                                              (lambda_parameter_payload
                                                (identifier)))
                                            (block
                                              (expression_statement
                                                (or_expression
                                                  (and_expression
                                                    (equality_expression
                                                      (comparison_expression
                                                        (sum_expression
                                                          (product_expression
                                                            (unary_expression
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (identifier))))))
                                                        (sum_expression
                                                          (product_expression
                                                            (unary_expression
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (integer)))))))))))))))))))))))))))))))))
  (definition
    (kw_def)
    (identifier)
    (or_expression
      (and_expression
        (equality_expression
          (comparison_expression
            (sum_expression
              (product_expression
                (unary_expression
                  (postfix_expression
                    (primary_expression
                      (foreach_expression
                        (kw_foreach)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (identifier))))))))))
                        (kw_with)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (identifier)))))))))))))))))))))
  (definition
    (kw_def)
    (identifier)
    (or_expression
      (and_expression
        (equality_expression
          (comparison_expression
            (sum_expression
              (product_expression
                (unary_expression
                  (postfix_expression
                    (primary_expression
                      (reduce_expression
                        (kw_reduce)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (identifier))))))))))
                        (kw_init)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (integer))))))))))
                        (kw_with)
                        (or_expression
                          (and_expression
                            (equality_expression
                              (comparison_expression
                                (sum_expression
                                  (product_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (lambda_expression
                                            (kw_fn)
                                            (lambda_parameters_parenthesized
                                              (lambda_parameter_payload
                                                (identifier)
                                                (identifier)))
                                            (block
                                              (expression_statement
                                                (or_expression
                                                  (and_expression
                                                    (equality_expression
                                                      (comparison_expression
                                                        (sum_expression
                                                          (sum_expression
                                                            (product_expression
                                                              (unary_expression
                                                                (postfix_expression
                                                                  (primary_expression
                                                                    (identifier))))))
                                                          (product_expression
                                                            (unary_expression
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (identifier))))))))))))))))))))))))))))))))))
